--- a/sagara_coding_card_application/pubspec.yaml
+++ b/sagara_coding_card_application/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^12.1.3
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
