Collection Page, Leaderboard Page, Profile Page, Scanner Page

--- a/sagara_coding_card_application/pubspec.yaml
+++ b/sagara_coding_card_application/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.9
+  mobile_scanner: ^3.5.5
+  qr_scanner_overlay: ^0.0.2
 
 dev_dependencies:
   flutter_test:
