--- a/sagara_coding_card_application/pubspec.yaml
+++ b/sagara_coding_card_application/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
-  go_router: ^12.1.3
+  go_router: ^13.0.1
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.9
@@ -46,6 +46,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   shimmer: ^3.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   icons_launcher: ^2.1.6
 
 # For information on the generic Dart part of this file, see the
