--- a/sagara_coding_card_application/pubspec.yaml
+++ b/sagara_coding_card_application/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
   flutter_svg: ^2.0.9
-  mobile_scanner: ^3.5.5
-  qr_scanner_overlay: ^0.0.2
   dio: ^5.4.0
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   shimmer: ^3.0.0
   shared_preferences: ^2.2.2
+  qr_code_scanner: ^1.0.1
+  meta: ^1.10.0
 
 dev_dependencies:
   flutter_test:
