--- a/sagara_coding_card_application/pubspec.yaml
+++ b/sagara_coding_card_application/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   shared_preferences: ^2.2.2
   qr_code_scanner: ^1.0.1
   meta: ^1.10.0
+  form_builder_validators: ^9.1.0
+  flutter_form_builder: ^9.1.1
 
 dev_dependencies:
   flutter_test:
