--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,39 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
+  cached_network_image: ^3.3.1
+  cupertino_icons: ^1.0.2
+  dio: ^5.4.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.3
+  flutter_form_builder: ^9.1.1
   flutter_screenutil: ^5.9.0
+  flutter_secure_storage: ^9.0.0
+  flutter_svg: ^2.0.9
+  form_builder_validators: ^9.1.0
   go_router: ^13.0.1
   google_fonts: ^6.1.0
-  smooth_page_indicator: ^1.1.0
-  flutter_svg: ^2.0.9
-  dio: ^5.4.0
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
-  shimmer: ^3.0.0
-  shared_preferences: ^2.2.2
-  qr_code_scanner: ^1.0.1
-  meta: ^1.10.0
-  form_builder_validators: ^9.1.0
-  flutter_form_builder: ^9.1.1
   google_sign_in: ^6.2.1
+  meta: ^1.10.0
+  qr_code_scanner: ^1.0.1
+  shared_preferences: ^2.2.2
+  shimmer: ^3.0.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.1
   icons_launcher: ^2.1.6
 
 # For information on the generic Dart part of this file, see the
@@ -87,13 +80,10 @@ flutter:
     - assets/images/
     - assets/icons/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
