--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: sagara_coding_card_application
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,9 +41,12 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   flutter_svg: ^2.0.9
   form_builder_validators: ^9.1.0
+  freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
+  json_annotation: ^4.9.0
+
   meta: ^1.10.0
   qr_code_scanner: ^1.0.1
   shared_preferences: ^2.2.2
@@ -51,16 +54,21 @@ dependencies:
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
+  json_serializable: ^6.8.0
+
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   icons_launcher: ^2.1.6
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 icons_launcher:
   min_sdk_android: 21
-  image_path: 'assets/images/ic_logo_sagara_coding_card.png'
+  image_path: "assets/images/ic_logo_sagara_coding_card.png"
   platforms:
     android:
       enable: true
@@ -69,7 +77,6 @@ icons_launcher:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
