--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^8.1.2
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
+  dart_jsonwebtoken: ^2.14.0
   dio: ^5.4.0
   equatable: ^2.0.5
   flutter:
