--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  app_links: ^6.0.2
   bloc: ^8.1.2
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
@@ -37,17 +38,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_form_builder: ^9.1.1
+  flutter_form_builder: ^9.2.1
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.0.0
   flutter_svg: ^2.0.9
-  form_builder_validators: ^9.1.0
   freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   json_annotation: ^4.9.0
-
   meta: ^1.10.0
   qr_code_scanner: ^1.0.1
   shared_preferences: ^2.2.2
@@ -55,15 +54,14 @@ dependencies:
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
-  json_serializable: ^6.8.0
+  build_runner: ^2.4.9
 
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
-  icons_launcher: ^2.1.6
-  build_runner: ^2.4.9
   freezed: ^2.5.2
-
+  icons_launcher: ^2.1.6
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
